Set html to margin:auto to prevent elements from stretching out

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,7 @@
+html{
+  margin: auto;
+}
+
 #large-title{
   font-family: Helvetica;
   font-size: 70px;
@@ -43,7 +47,7 @@ h3{
   font-size: 23px;
   font-weight: bold;
   color: white;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background-image: url("");
 }
 .bottom{
   display:flex;
